--- a/EngineerNotbook.PublicApi/appsettings.json
+++ b/EngineerNotbook.PublicApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:/api/",
+    "apiBase": "https://localhost:5001/api/",
     "webBase": "https://localhost:/"
   },
   
@@ -10,6 +10,8 @@
     "IdentityConnection": "",
     "EngineerConnection": ""
   },
+  
+  "UseInMemoryDatabase": true,
   
   "Logging": {
     "LogLevel": {
