--- a/EngineerNotbook.PublicApi/appsettings.json
+++ b/EngineerNotbook.PublicApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:5001/api/",
-    "webBase": "https://localhost:/"
+    "apiBase": "https://localhost:5099/api/",
+    "webBase": "https://localhost:5001/"
   },
   
   "EngineerBaseUrl": "",
