--- a/EngineerNotebook.BlazorAdmin/EngineerNotebook.BlazorAdmin.csproj
+++ b/EngineerNotebook.BlazorAdmin/EngineerNotebook.BlazorAdmin.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+        <PackageReference Include="Blazored.TextEditor" Version="1.0.4" />
         <PackageReference Include="BlazorInputFile" Version="0.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
@@ -14,6 +15,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.11" PrivateAssets="all" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.11" />
         <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.13.1" />
         <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     </ItemGroup>
 
