--- a/EngineerNotebook.BlazorAdmin/EngineerNotebook.BlazorAdmin.csproj
+++ b/EngineerNotebook.BlazorAdmin/EngineerNotebook.BlazorAdmin.csproj
@@ -15,12 +15,17 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.11" PrivateAssets="all" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.11" />
         <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
+        <PackageReference Include="MudBlazor" Version="5.1.5" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.13.1" />
         <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\EngineerNotebook.Shared\EngineerNotebook.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
     </ItemGroup>
 
 </Project>
