--- a/EngineerNotbook.PublicApi/EngineerNotbook.PublicApi.csproj
+++ b/EngineerNotbook.PublicApi/EngineerNotbook.PublicApi.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <RootNamespace>EngineerNotebook.PublicApi</RootNamespace>
-    </PropertyGroup>
+      <UserSecretsId>6bf9d9ba-6aff-4055-96c6-155fce3ca4b2</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Ardalis.ApiEndpoints" Version="3.1.0" />
