--- a/EngineerNotbook.PublicApi/appsettings.json
+++ b/EngineerNotbook.PublicApi/appsettings.json
@@ -7,8 +7,7 @@
   "EngineerBaseUrl": "",
   
   "ConnectionStrings": {
-    "IdentityConnection": "",
-    "EngineerConnection": ""
+    "IdentityConnection": ""
   },
   
   "UseInMemoryDatabase": true,
