--- a/EngineerNotebook.PublicApi/appsettings.Production.json
+++ b/EngineerNotebook.PublicApi/appsettings.Production.json
@@ -6,6 +6,11 @@
   
   "EngineerBaseUrl": "",
   
+  "ConnectionStrings": {
+    "IdentityConnection": "server=localhost;database=DevryIdentity;user=root;password=devry12",
+    "EngineerConnection": "server=localhost;database=EngineersNotebook;user=root;password=devry12"
+  },
+  
   "UseInMemoryDatabase": true,
   
   "Logging": {
