updated scripts based on findings

--- a/EngineerNotebook.PublicApi/Dockerfile
+++ b/EngineerNotebook.PublicApi/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["PublicApi/PublicApi.csproj", "PublicApi/"]
-RUN dotnet restore "PublicApi/PublicApi.csproj"
+COPY ["EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj", "EngineerNotebook.PublicApi/"]
+RUN dotnet restore "EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj"
 COPY . .
-WORKDIR "/src/PublicApi"
-RUN dotnet build "PublicApi.csproj" -c Release -o /app/build
+WORKDIR "/src/EngineerNotebook.PublicApi"
+RUN dotnet build "EngineerNotebook.PublicApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "PublicApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "EngineerNotebook.PublicApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PublicApi.dll"]
+ENTRYPOINT ["dotnet", "EngineerNotebook.PublicApi.dll"]
