Adjusting as needed

--- a/EngineerNotebook.PublicApi/appsettings.Production.json
+++ b/EngineerNotebook.PublicApi/appsettings.Production.json
@@ -1,14 +1,14 @@
 {
   "baseUrls": {
     "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:5001/"
+    "blazor-admin": "https://blazor-admin:5001/"
   },
   
   "EngineerBaseUrl": "",
   
   "ConnectionStrings": {
-    "IdentityConnection": "server=localhost;database=DevryIdentity;user=root;password=devry12",
-    "EngineerConnection": "server=localhost;database=EngineersNotebook;user=root;password=devry12"
+    "IdentityConnection": "server=devry-identity;database=DevryIdentity;user=root;password=devry12",
+    "EngineerConnection": "server=engineer-db;database=EngineersNotebook;user=root;password=devry12"
   },
   
   "UseInMemoryDatabase": true,
