--- a/EngineerNotebook.PublicApi/appsettings.docker.json
+++ b/EngineerNotebook.PublicApi/appsettings.docker.json
@@ -7,7 +7,7 @@
   "EngineerBaseUrl": "",
   
   "ConnectionStrings": {
-    "IdentityConnection": "server=devry-identity;database=DevryIdentity;user=root;password=devry12",
+    "IdentityConnection": "server=devry-identity;port=4306;database=DevryIdentity;user=root;password=devry12",
     "EngineerConnection": "server=engineer-db;database=EngineersNotebook;user=root;password=devry12"
   },
   
