--- a/EngineerNotebook.PublicApi/appsettings.json
+++ b/EngineerNotebook.PublicApi/appsettings.json
@@ -6,6 +6,11 @@
   
   "EngineerBaseUrl": "",
   
+  "ConnectionStrings": {
+    "IdentityConnection": "server=devry-identity;port=4306;database=DevryIdentity;user=root;password=devry12",
+    "EngineerConnection": "server=engineer-db;database=EngineersNotebook;user=root;password=devry12"
+  },
+  
   "UseInMemoryDatabase": true,
   
   "Logging": {
