Converted bash to powershell. Added migration-creation script for production. Added manual script invocation for prod. Added environment variable loading

--- a/EngineerNotebook.PublicApi/appsettings.Development.json
+++ b/EngineerNotebook.PublicApi/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "IdentityConnection": "server=localhost;port=3306;database=DevryIdentity;user=root;password=devry123",
+    "EngineerConnection": "server=localhost;database=EngineersNotebook;user=root;password=devry123"
   }
 }
