--- a/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
+++ b/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
@@ -21,6 +21,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="MySql.Data" Version="8.0.27" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.2" />
@@ -31,6 +32,12 @@
     <ItemGroup>
       <ProjectReference Include="..\EngineerNotebook.Core\EngineerNotebook.Core.csproj" />
       <ProjectReference Include="..\EngineerNotebook.Infrastructure\EngineerNotebook.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update=".env">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
