Updated some docker settings. Migrated towards connection string that's manually pieced together for production reasons...

--- a/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
+++ b/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
@@ -38,6 +38,12 @@
       <None Update=".env">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="sql\engineer.sql">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="sql\identity.sql">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
