--- a/EngineerNotebook.PublicApi/appsettings.json
+++ b/EngineerNotebook.PublicApi/appsettings.json
@@ -5,10 +5,23 @@
   },
   
   "EngineerBaseUrl": "",
-  
-  "ConnectionStrings": {
-    "IdentityConnection": "server=devry-identity;port=4306;database=DevryIdentity;user=root;password=devry123",
-    "EngineerConnection": "server=engineer-db;database=EngineersNotebook;user=root;password=devry123"
+
+  "Databases": {
+    "Identity": {
+      "Server": "devry-identity",
+      "Port": 4306,
+      "Database": "devryidentity",
+      "Username": "root",
+      "Password": "devry123"
+    },
+
+    "Engineer": {
+      "Server": "engineer-db",
+      "Port": 5306,
+      "Database": "engineersnotebook",
+      "Username": "root",
+      "Password": "devry123"
+    }
   },
   
   "UseInMemoryDatabase": true,
