Corrected project setup to work in a docker network environment. Corrected database scripts to ACTUALLY work.

--- a/EngineerNotebook.PublicApi/Dockerfile
+++ b/EngineerNotebook.PublicApi/Dockerfile
@@ -3,6 +3,10 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+RUN mkdir -p "/https"
+COPY ["https/aspnetapp.pfx", "/https/aspnetapp.pfx"]
+RUN chmod 666 /https/aspnetapp.pfx
+
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj", "EngineerNotebook.PublicApi/"]
