--- a/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
+++ b/EngineerNotebook.PublicApi/EngineerNotebook.PublicApi.csproj
@@ -38,10 +38,7 @@
       <None Update=".env">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="sql\engineer.sql">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="sql\identity.sql">
+      <None Update="wait-for.sh">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
