--- a/EngineerNotebook.BlazorAdmin/Dockerfile
+++ b/EngineerNotebook.BlazorAdmin/Dockerfile
@@ -1,7 +1,6 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
@@ -14,7 +13,17 @@ RUN dotnet build "EngineerNotebook.BlazorAdmin.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "EngineerNotebook.BlazorAdmin.csproj" -c Release -o /app/publish
 
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "EngineerNotebook.BlazorAdmin.dll"]
+FROM nginx:alphine AS final
+
+EXPOSE 80
+EXPOSE 443
+
+ENV BLAZOR_ENVIRONMENT=Production
+WORKDIR /usr/share/nginx/html
+
+COPY ["EngineerNotebook.BlazorAdmin/bin/publish/wwwroot", "./"]
+COPY "EngineerNotebook.BlazorAdmin/nginx.conf" "/etc/nginx/nginx.conf"
+COPY "EngineerNotebook.BlazorAdmin/start.sh" ./
+
+RUN sed -i -e "s/\r$//" start.sh
+CMD /bin/sh ./start.sh
