--- a/EngineerNotebook.Shared/EngineerNotebook.Shared.csproj
+++ b/EngineerNotebook.Shared/EngineerNotebook.Shared.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.Specification" Version="5.2.0" />
       <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
+      <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
