--- a/deployment-artifacts/appsettings.json
+++ b/deployment-artifacts/appsettings.json
@@ -1,6 +1,6 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
+    "apiBase": "https://engineer-notebook-public-api:5099/api/",
     "webBase": "https://localhost:5001/"
   },
   
