--- a/EngineerNotebook.Infrastructure/EngineerNotebook.Infrastructure.csproj
+++ b/EngineerNotebook.Infrastructure/EngineerNotebook.Infrastructure.csproj
@@ -12,11 +12,14 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.Specification" Version="5.2.0" />
       <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="5.2.0" />
+      <PackageReference Include="Docker.DotNet" Version="3.125.5" />
+      <PackageReference Include="HtmlToPDFCore" Version="1.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
       <PackageReference Include="Razor.Templating.Core" Version="1.6.0" />
+      <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="19.4.0.42" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
     </ItemGroup>
 
