implemented phrase searching. fixed token source not being disposed of. added capability of not having bot

--- a/EngineerNotebook.PublicApi/Dockerfile
+++ b/EngineerNotebook.PublicApi/Dockerfile
@@ -4,6 +4,8 @@ EXPOSE 80
 EXPOSE 443
 
 RUN mkdir -p "/https"
+COPY ["https/aspnetapp.pfx", "/https/aspnetapp.pfx"]
+RUN chmod 666 /https/aspnetapp.pfx
 RUN apt update
 RUN apt clean
 RUN apt --reinstall install libsigsegv2
